<resources>
    <string name="app_name">SchoolDetailsDemo</string>
    <string name="teacher">Teacher</string>
    <string name="school">School</string>


    <string name="dashara_shakshanik_sankul">Dashara Shakshanik Sankul</string>
    <string name="khushbu_gmail_com">khushbu@gmail.com</string>

    <string name="loading">Loading..</string>

    <string name="gujarati">Gujarati</string>
    <string name="subject">Subject</string>

    <string name="hey_lilly">Hey Lilly ,</string>
    <string name="purchase_primium">Purchase premium yearly</string>
    <string name="student_license">Student License</string>
    <string name="search_techer_school">Search Techers and Schools</string>
    <string name="purchase_a_kodris_token">Purchase a Kodris Token</string>
    <string name="school_name">School Name</string>
    <string name="email">Email</string>
    <string name="schoolInfo">School Info</string>
    <string name="certification">Certification</string>
    <string name="teachings">Teachings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="txtEmail">txtEmail</string>
    <string name="show_email">Show Email</string>
    <string name="show_address">Show Address</string>
    <string name="show_website">Show Website</string>
    <string name="total_teachers">Total Teachers</string>
    <string name="show_total_teacher">Show Total Teacher</string>
    <string name="standard">Standard</string>
    <string name="show_standard">Show Standard</string>
    <string name="show_subject">Show Subject</string>
    <string name="courses">Courses</string>
    <string name="show_courses">Show Courses</string>
    <string name="id">id</string>
    <string name="document">Document</string>
    <string name="name">Name</string>
    <string name="extension">Extension</string>
    <string name="home">Home</string>
    <string name="chats">chats</string>
    <string name="settings">Settings</string>
    <string name="welcome_to">Welcome To</string>
    <string name="kodris_africa">Kodris Africa</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the">Lorem Ipsum Is Simply Dummy Text Of The</string>
    <string name="printing_and_typesetting_industry">Printing And TypeSetting Industry</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log In</string>
    <string name="not_an_existing_user">Not an Existing USer?</string>
    <string name="sign_up">Sign Up.</string>

    <!--......................login validation................................-->

    <string name="blank_email">Please Enter email</string>
    <string name="valid_email">Please valid email</string>
    <string name="blank_pass">Please Enter Password</string>
    <string name="blank_conform_pass">Please Enter Conform Password</string>
    <string name="wrong">SomeThings want to wrong</string>
    <string name="signup">SignUp</string>
    <string name="conform_password">Conform Password</string>
    <string name="i_hereby_accept_all_the">I hereby accept All the</string>
    <string name="terms_and_condition">Terms and condition</string>
    <string name="Experience">Experience</string>
    <string name="Education">Education</string>
    <string name="education">Education</string>
    <string name="txteducation">txtEducation</string>
    <string name="txtEducation">txtEducation</string>

</resources>